--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <div class="row mt-5">
         <div class="col-md-6 offset-1">
             <h1 class="text-light display-1 text-center">
-                If your wants to experience a better system for managing education migrate use our SAAS
+                If you want to experience a better system for managing education migrate to our SAAS
             </h1>
         </div>
 
@@ -60,7 +60,7 @@
                         <button type="submit" class="btn btn-md btn-success">Submit</button>
                     </div>
                     <div class="mb-3">
-                        <h6> Already have an account <a href="">SignIn here</a>  </h6>
+                        <h6> Already have an account ? &nbsp <a href="login"> SignIn here</a>  </h6>
                     </div>
                 </div>
             </form>
